Added animation for simple lines

--- a/NetworkX/notebooks/scratch.ipynb
+++ b/NetworkX/notebooks/scratch.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,8 @@
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import itertools"
    ]
   },
   {
@@ -76,6 +77,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AB = zip(Ax, Bx, [None]*len())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -91,6 +101,39 @@
    "outputs": [],
    "source": [
     "dfa = pd.DataFrame({'x': Ax, 'y': Ay, 'name': 'A', 'T':T})\n",
+    "dfb = pd.DataFrame({'x': Bx, 'y': By, 'name': 'B', 'T':T})\n",
+    "dfc = pd.DataFrame({'x': Cx, 'y': Cy, 'name': 'C', 'T':T})\n",
+    "df = pd.concat([dfa, dfb, dfc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 3, None), (2, 4, None)]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip([1,2], [3,4], [None]*2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dfab = pd.DataFrame({'x': [Ax, , 'y': Ay, 'name': 'AB', 'T':T})\n",
     "dfb = pd.DataFrame({'x': Bx, 'y': By, 'name': 'B', 'T':T})\n",
     "dfc = pd.DataFrame({'x': Cx, 'y': Cy, 'name': 'C', 'T':T})\n",
     "df = pd.concat([dfa, dfb, dfc])"
@@ -118,6 +161,17 @@
     "node_scatter = go.Scatter(\n",
     "    x='x', y='y',animation_frame=\"T\", animation_group=\"name\",\n",
     "    mode='markers')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(df, x=\"x\", y=\"y\", animation_frame=\"T\", animation_group=\"name\",\n",
+    "            hover_name=\"name\",\n",
+    "           range_x=[-2,2], range_y=[-2,2])"
    ]
   },
   {
