--- a/NetworkX/notebooks/network_simulation.ipynb
+++ b/NetworkX/notebooks/network_simulation.ipynb
@@ -73,6 +73,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def animate_network2(node_pos, edge_pos):\n",
+    "    # make figure\n",
+    "    fig_dict = {\n",
+    "        \"data\": [],\n",
+    "        \"layout\": {},\n",
+    "        \"frames\": []\n",
+    "    }\n",
+    "\n",
+    "    # LAYOUT\n",
+    "    fig_dict[\"layout\"][\"xaxis\"] = {\"range\": [-5, 5], \"title\": \"Life Expectancy\"}\n",
+    "    fig_dict[\"layout\"][\"yaxis\"] = {\"range\": [-5, 5], \"title\": \"GDP per Capita\"}\n",
+    "    \n",
+    "    fig_dict[\"layout\"][\"updatemenus\"] = [\n",
+    "        {\n",
+    "            \"buttons\": [\n",
+    "                {\n",
+    "                    \"args\": [None, {\"frame\": {\"duration\": 500, \"redraw\": False},\n",
+    "                                    \"fromcurrent\": True, \"transition\": {\"duration\": 300,\n",
+    "                                                                        \"easing\": \"quadratic-in-out\"}}],\n",
+    "                    \"label\": \"Play\",\n",
+    "                    \"method\": \"animate\"\n",
+    "                },\n",
+    "                {\n",
+    "                    \"args\": [[None], {\"frame\": {\"duration\": 0, \"redraw\": False},\n",
+    "                                    \"mode\": \"immediate\",\n",
+    "                                    \"transition\": {\"duration\": 0}}],\n",
+    "                    \"label\": \"Pause\",\n",
+    "                    \"method\": \"animate\"\n",
+    "                }\n",
+    "            ],\n",
+    "            \"direction\": \"left\",\n",
+    "            \"pad\": {\"r\": 10, \"t\": 87},\n",
+    "            \"showactive\": False,\n",
+    "            \"type\": \"buttons\",\n",
+    "            \"x\": 0.1,\n",
+    "            \"xanchor\": \"right\",\n",
+    "            \"y\": 0,\n",
+    "            \"yanchor\": \"top\"\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "    sliders_dict = {\n",
+    "        \"active\": 0,\n",
+    "        \"yanchor\": \"top\",\n",
+    "        \"xanchor\": \"left\",\n",
+    "        \"currentvalue\": {\n",
+    "            \"font\": {\"size\": 20},\n",
+    "            \"prefix\": \"Year:\",\n",
+    "            \"visible\": True,\n",
+    "            \"xanchor\": \"right\"\n",
+    "        },\n",
+    "        \"transition\": {\"duration\": 300, \"easing\": \"cubic-in-out\"},\n",
+    "        \"pad\": {\"b\": 10, \"t\": 50},\n",
+    "        \"len\": 0.9,\n",
+    "        \"x\": 0.1,\n",
+    "        \"y\": 0,\n",
+    "        \"steps\": []\n",
+    "    }\n",
+    "    fig_dict[\"layout\"][\"sliders\"] = [sliders_dict]\n",
+    "\n",
+    "    # DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# make data\n",
+    "year = 1952\n",
+    "for continent in continents:\n",
+    "    dataset_by_year = dataset[dataset[\"year\"] == year]\n",
+    "    dataset_by_year_and_cont = dataset_by_year[\n",
+    "        dataset_by_year[\"continent\"] == continent]\n",
+    "\n",
+    "    data_dict = {\n",
+    "        \"x\": list(dataset_by_year_and_cont[\"lifeExp\"]),\n",
+    "        \"y\": list(dataset_by_year_and_cont[\"gdpPercap\"]),\n",
+    "        \"mode\": \"markers\",\n",
+    "        \"text\": list(dataset_by_year_and_cont[\"country\"]),\n",
+    "        \"marker\": {\n",
+    "            \"sizemode\": \"area\",\n",
+    "            \"sizeref\": 200000,\n",
+    "            \"size\": list(dataset_by_year_and_cont[\"pop\"])\n",
+    "        },\n",
+    "        \"name\": continent\n",
+    "    }\n",
+    "    fig_dict[\"data\"].append(data_dict)\n",
+    "\n",
+    "# make frames\n",
+    "for year in years:\n",
+    "    frame = {\"data\": [], \"name\": str(year)}\n",
+    "    for continent in continents:\n",
+    "        dataset_by_year = dataset[dataset[\"year\"] == int(year)]\n",
+    "        dataset_by_year_and_cont = dataset_by_year[\n",
+    "            dataset_by_year[\"continent\"] == continent]\n",
+    "\n",
+    "        data_dict = {\n",
+    "            \"x\": list(dataset_by_year_and_cont[\"lifeExp\"]),\n",
+    "            \"y\": list(dataset_by_year_and_cont[\"gdpPercap\"]),\n",
+    "            \"mode\": \"markers\",\n",
+    "            \"text\": list(dataset_by_year_and_cont[\"country\"]),\n",
+    "            \"marker\": {\n",
+    "                \"sizemode\": \"area\",\n",
+    "                \"sizeref\": 200000,\n",
+    "                \"size\": list(dataset_by_year_and_cont[\"pop\"])\n",
+    "            },\n",
+    "            \"name\": continent\n",
+    "        }\n",
+    "        frame[\"data\"].append(data_dict)\n",
+    "\n",
+    "    fig_dict[\"frames\"].append(frame)\n",
+    "    slider_step = {\"args\": [\n",
+    "        [year],\n",
+    "        {\"frame\": {\"duration\": 300, \"redraw\": False},\n",
+    "         \"mode\": \"immediate\",\n",
+    "         \"transition\": {\"duration\": 300}}\n",
+    "    ],\n",
+    "        \"label\": year,\n",
+    "        \"method\": \"animate\"}\n",
+    "    sliders_dict[\"steps\"].append(slider_step)\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig = go.Figure(fig_dict)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def animate_network2(node_pos, edge_pos):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -229,12 +376,6 @@
    "outputs": [],
    "source": [
     "G = nx.Graph()\n",
-    "N = 10\n",
-    "i = [i for i in range(N)]\n",
-    "s = [np.sin(i/6) for i in range(N)]\n",
-    "c = [np.cos(i/6) for i in range(N)]\n",
-    "t = [(i-N/2)/2 for i in range(N)]\n",
-    "\n",
     "G.add_node('A')\n",
     "G.add_node('B')\n",
     "G.add_node('C')\n",
